# CardCache

./: .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  devenv.yaml  docker-compose.yml  start.sh
backend/: .env  Cargo.toml  Dockerfile  Makefile  backend.Dockerfile  db.sql  devenv.nix
backend/entity/: Cargo.toml
backend/entity/src/: game.rs  lib.rs
backend/migration/src/: lib.rs  m20220101_000001_create_game_table.rs
backend/migrations/2022-04-08-090223_create_games/: down.sql  up.sql
backend/migrations/2022-04-08-090312_create_illustrators/: down.sql  up.sql
backend/migrations/2022-04-08-091317_create_cards/: down.sql  up.sql
backend/src/: error.rs  handler.rs  main.rs
backend/src/db/: cards.rs  games.rs  mod.rs  models.rs  schema.rs
backend/src/db/base/: cards.sql  editions.sql  games.sql  illustrators.sql  values.sql  variants.sql
backend/src/db/flesh_and_blood/: card_types.sql  cards.sql  classes.sql  essences.sql  rarities.sql  sets.sql  talents.sql
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Dockerfile  Makefile  devenv.nix  frontend.Dockerfile  index.html  index.scss  tailwind.Dockerfile  tailwind.config.js  tailwind.css  tailwind.in.css
frontend/src/: main.rs
frontend/src/cards/: create.rs  detail.rs  list.rs  mod.rs
frontend/src/components/: card.rs
frontend/src/games/: create.rs  detail.rs  list.rs  mod.rs  select.rs
frontend/src/pages/: home.rs  mod.rs
nix/pkgs/: cardvault.nix
