[package]
name = "backend"
version = "0.1.0"
authors = ["Nils Harbke <nils.harbke@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.17.*", features = ["macros", "rt-multi-thread"] }
warp = "=0.3.*"
# mobc = "=0.7.*"
# mobc-postgres = { version = "=0.7.*", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.*"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
common = { version = "0.1.0", path = "../common" }

[profile.dev]
debug = 0
