[package]
name = "backend"
version = "0.1.0"
authors = ["Nils Harbke <nils.harbke@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.17.*", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ] }
warp = "0.3.2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.*"
common = { version = "0.1.0", path = "../common" }
entity = { path = "entity" }
migration = { path = "migration" }

[profile.dev]
debug = 0
