[package]
name = "frontend"
version = "0.1.0"
authors = ["Nils Harbke <nils.harbke@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
# wasm-bindgen-cli
yew = "0.19.0"
yew-router = "^0.16"
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
gloo-timers = "0.2"
# serde_json = "1"
# anyhow = "1"
# wasm-bindgen = "0.2.78"
# reqwasm = "0.4.0"
trunk = "0.14.0"
#common = { version = "0.1.0", path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = []
